Get coming hit track
