# api/swagger/swagger.yaml
@@ -56,6 +56,25 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /track/get-coming-hit-track:
+    x-swagger-router-controller: track
+    get:
+      description: Get new track may be hit in the future
+      operationId: getComingHitTrack
+      parameters:
+        - name: key
+          in: query
+          description: Token
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/TrackResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /test:
     x-swagger-router-controller: user
     get:
